--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -536,6 +536,14 @@ a {
     margin-top: 5px;
 }
 
+.empty-state {
+    padding: 20px;
+    border-radius: 12px;
+    margin-top: 30px;
+    border: 2px solid #e5ecfc;
+    text-align: center;
+}
+
 /* Footer */
 .footer-copyright {
     padding: 30px 0;
