--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -673,3 +673,64 @@ a {
     height: 50px;
     width: 50px;
 }
+
+/* Not Found */
+.error-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 80vh;
+    text-align: center;
+    padding: 100px 0;
+}
+
+.img-100 {
+    width: 100px !important;
+}
+
+.font-danger {
+    color: #FC4438 !important;
+}
+
+.error-wrapper .error-heading {
+    margin-top: 115px;
+}
+
+.error-wrapper .error-heading .headline {
+    font-size: 285px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-top: -130px;
+}
+
+.error-wrapper .sub-content {
+    font-size: 18px;
+    color: #2F2F3B;
+    letter-spacing: 1px;
+    font-weight: normal;
+    line-height: 35px;
+    z-index: 3;
+    position: relative;
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+.error-wrapper .btn-wrapper {
+    margin-top: 40px;
+}
+
+.btn-lg {
+    font-size: 18px;
+}
+
+.btn {
+    padding: 0.375rem 1.75rem;
+}
+
+.btn-danger-gradien {
+    background-image: linear-gradient(to right, #fd6a60 0%, #fb1e10 51%, #fd6a60 100%);
+    border: none;
+    color: #fff;
+    background-size: auto 200%;
+    transition: all 0.3s ease;
+}
