--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -346,6 +346,10 @@ a {
     padding-top: 320px;
 }
 
+.result-section .padding-detail {
+    padding-top: 30px;
+}
+
 .result-section .seo-search-box {
     position: relative;
     z-index: 2;
@@ -674,6 +678,35 @@ a {
     width: 50px;
 }
 
+/* detail page action button with archived and trash css */
+.detailpage_action {
+    display: flex;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+    gap: 16px;
+}
+
+.detailpage_action button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 700;
+    border-radius: 50px;
+    box-shadow: 0px 10px 30px 0px rgb(71 59 240 / 36%);
+    overflow: hidden;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border: none;
+}
+
 /* Not Found */
 .error-wrapper {
     display: flex;
@@ -733,4 +766,9 @@ a {
     color: #fff;
     background-size: auto 200%;
     transition: all 0.3s ease;
+}
+
+/* Detail Page */
+.note-body {
+    padding: 20px 0;
 }
