feat: add html parser to body

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -563,20 +563,6 @@ a {
     text-align: center;
 }
 
-/* Footer */
-.footer-copyright {
-    padding: 30px 0;
-}
-
-.footer-container {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .text-center {
     text-align: center;
 }
@@ -636,20 +622,6 @@ a {
 
 .template-btn.danger-bg:hover {
     background-color: #df4740;
-}
-
-/* Footer */
-.footer-copyright {
-    padding: 30px 0;
-}
-
-.footer-container {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 /* Action Button */
@@ -772,3 +744,38 @@ a {
 .note-body {
     padding: 20px 0;
 }
+
+.add-new-page__input {
+    margin-top: 32px;
+  }
+
+  .add-new-page__input .add-new-page__input__title {
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    color: var(--on-background);
+    font-family: 'Inter', sans-serif;
+    font-size: 64px;
+    font-weight: bold;
+    padding: 8px 0;
+  }
+
+  .add-new-page__input__title::placeholder {
+    color: var(--on-background-grey);
+  }
+
+  .add-new-page__input .add-new-page__input__body {
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    color: var(--on-background);
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    padding: 8px 0;
+    min-height: 500px;
+  }
+
+  [data-placeholder]:empty::before {
+    content: attr(data-placeholder);
+    color: var(--on-background-grey)
+  }
