--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -506,7 +506,7 @@ a {
     z-index: -1;
 }
 
-.list-content {
+.list-content, .list-skeleton {
     padding: 20px;
     border-radius: 12px;
     margin-top: 30px;
