--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,7 @@
     --color-black: #000;
     --color-dark: #1b202f;
     --color-search: #473bf0;
+    --color-search-text: #6e727d;
     --color-input: #f2f5fe;
     --color-text-input: #6e727d;
 }
@@ -451,6 +452,7 @@ a {
     background: transparent;
     overflow: visible;
     font-family: inherit;
+    color: var(--color-search-text);
     outline: none;
 }
 
@@ -719,4 +721,42 @@ a {
 
 .form-group {
     margin-bottom: 1rem;
+}
+
+/* Loading Indicator Spinner */
+.loading-indicator {
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 50px;
+    border-radius: 5px;
+}
+
+.loading-indicator-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-indicator-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid transparent;
+    border-top-color: var(--color-primary);
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
 }
